--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,182 @@
-.App {
-  text-align: center;
+.main_window{
+    width: 100%;
+    height: fit-content;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    margin: 15px;
+    /* width: 100%; */
+    display: flex;
+    justify-content: space-around;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header button{
+    cursor: pointer;
+    border-radius: 10px;
+    transition: all .2s linear;
+}
+.add_question{
+    background-color: rgba(72, 255, 0, 0.403);
+}
+.clear_all{
+    background-color: rgb(240, 0, 0);
+}
+.default_questions{
+    background-color: rgb(222, 222, 222);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.add_question:hover, .clear_all:hover, .default_questions:hover{
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px #888888;
 }
 
-.App-link {
-  color: #61dafb;
+.questions_list{
+    margin: 10px;
+    /* width: 100%; */
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.question_row{
+    margin: 0 5px 10px 10px;
+    padding-bottom: 10px;
+    height: fit-content;
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+    border-bottom: 3px solid rgb(167, 167, 167);
+}
+
+.question_inner{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* cursor: pointer; */
+}
+
+
+/* RADIO status swithers */
+.status_swithers{
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+}
+
+.switch {
+    margin-bottom: 3px;
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+  
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(234, 234, 234);
+    transition: .3s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 12px;
+    width: 12px;
+    left: 3px;
+    bottom: 4px;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+.slider.RedRadio:before{
+    background-color: rgb(230, 0, 0);
+}
+.slider.YellowRadio:before{
+    background-color: rgb(251, 255, 23);
+}
+.slider.GreyRadio:before{
+    background-color: rgb(126, 126, 126);
+}
+.slider.GreenRadio:before{
+    background-color: rgb(44, 214, 2);
+}
+
+input:checked + .slider.RedRadio {
+    background-color: rgb(230, 0, 0);
+}
+input:checked + .slider.YellowRadio {
+    background-color: rgb(2251, 255, 23);
+}
+input:checked + .slider.GreyRadio {
+    background-color: rgb(151, 151, 151);
+}
+input:checked + .slider.GreenRadio {
+    background-color: rgb(44, 214, 2);
+}
+
+input:checked + .slider:before {
+    transform: translateX(22px);
+    background-color: white;
+}
+  
+  /* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
+}
+/* RADIO status swithers */
+
+.question_index{
+    text-align:center;
+    padding: 0 5px;
+    margin: 0 10px 0 0;
+    border-right: 2px solid rgb(167, 167, 167);
+    color: rgb(167, 167, 167);
+}
+
+.question_text{
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 10px;
+    box-shadow: 0 -5px 10px rgb(101, 101, 101) inset;
+}
+.question_text:hover {
+    color: rgb(0, 29, 191);
+}
+.question_text.status-red{
+    box-shadow: 0 -5px 10px rgb(225, 0, 0) inset;
+}
+.question_text.status-yellow{
+    box-shadow: 0 -5px 10px rgb(241, 244, 17) inset;
+}
+.question_text.status-grey{
+    box-shadow: 0 -5px 10px rgb(101, 101, 101) inset;
+}
+.question_text.status-green{
+    box-shadow: 0 -5px 10px rgb(19, 181, 1) inset;
+}
+
+.question_comments{
+    margin-left: 90px;
+    font-style: italic;
+    font-size: 12px;
+    color: rgb(167, 167, 167);
+    line-height: 1.1;
 }
