--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,8 @@ input:checked + .slider:before {
 .question_comments{
     display: block;
     margin-left: 90px;
-    margin-top: 10px;
+    margin-top: 5px;
+    padding: 5px;
     font-style: italic;
     font-size: 12px;
     color: rgb(167, 167, 167);
